--- a/appendix.tex
+++ b/appendix.tex
@@ -883,62 +883,48 @@ i\Bigg) k^3+24 \Bigg(-1392 \eta ^4\kmax^4+2500 i \eta ^3 \kmax^3 \\
 +9\beta ^2 \eta ^2 \left(8\eta ^2\kmax^2+53 i \eta  \kmax+84\right)+2 \beta  \eta  \bigg(44 i
 \eta^3\kmax^3-138 \eta^2 \kmax^2+477 i \eta  \kmax+756\bigg)+756\Bigg)\Bigg\}\displaybreak[0]\\
 % 
--\sqrt{k-\kmin}
-   \sqrt{\kmin} \left(-2835 \eta ^4 k^6+1890 i \eta ^3 (10 \beta  \eta +i \kmin \eta
-+10) k^5+14
-   \eta ^2 \left(1800 \beta ^2 \eta ^2+1428 \kmin^2 \eta ^2-1660 i \kmin \eta +5 \beta 
-(-332 i
-   \eta  \kmin-1761) \eta -10605\right) k^4-4 \eta  \left(-2364 \eta ^3 \kmin^3+13480 i
-\eta ^2
-   \kmin^2+39465 \eta  \kmin+75 \beta ^2 \eta ^2 (200 \eta  \kmin-1083 i)+5 \beta 
-\eta 
-   \left(2696 i \eta ^2 \kmin^2+10893 \eta  \kmin-32490 i\right)-81225 i\right) k^3-24
-   \left(1392 \eta ^4 \kmin^4-1000 i \eta ^3 \kmin^3-10930 \eta ^2 \kmin^2+12735 i
-\eta 
-   \kmin+5 \beta ^2 \eta ^2 \left(208 \eta ^2 \kmin^2+2547 i \eta 
-\kmin+5796\right)+10
-   \beta  \eta  \left(-100 i \eta ^3 \kmin^3-989 \eta ^2 \kmin^2+2547 i \eta 
-   \kmin+5796\right)+28980\right) k^2+160 \kmin \left(24 \eta ^4 \kmin^4+32 i \eta
-^3
-   \kmin^3-453 \eta ^2 \kmin^2+603 i \eta  \kmin+9 \beta ^2 \eta ^2 \left(8 \eta
-^2
-   \kmin^2+67 i \eta  \kmin+126\right)+\beta  \eta  \left(32 i \eta ^3 \kmin^3-381
-\eta ^2
-   \kmin^2+1206 i \eta  \kmin+2268\right)+1134\right) k+320 \kmin^2 \left(24 \eta
-^4
-   \kmin^4+32 i \eta ^3 \kmin^3+492 \eta ^2 \kmin^2-657 i \eta  \kmin+9
-\beta ^2
-   \eta ^2 \left(8 \eta ^2 \kmin^2-73 i \eta  \kmin-84\right)+2 \beta  \eta  \left(16 i
-\eta ^3
-   \kmin^3+282 \eta ^2 \kmin^2-657 i \eta 
-   \kmin-756\right)-756\right)\right)+\sqrt{\kmin} \sqrt{k+\kmin} \left(-2835 \eta
-^4
-   k^6+630 \eta ^3 (5 i \beta  \eta +3 \kmin \eta +5 i) k^5-14 \eta ^2 \left(1800 \beta ^2
-\eta
-   ^2-1428 \kmin^2 \eta ^2+2710 i \kmin \eta +5 \beta  (542 i \eta  \kmin+3201)
-\eta
-   +14205\right) k^4-4 \eta  \left(2364 \eta ^3 \kmin^3+6620 i \eta ^2 \kmin^2-9465
-\eta 
-   \kmin+75 \beta ^2 \eta ^2 (200 \eta  \kmin+303 i)+5 \beta  \eta  \left(1324 i \eta ^2
-   \kmin^2+1107 \eta  \kmin+9090 i\right)+22725 i\right) k^3+24 \left(-1392 \eta ^4
-   \kmin^4+2500 i \eta ^3 \kmin^3+13010 \eta ^2 \kmin^2-16035 i \eta 
-\kmin+5 \beta
-   ^2 \eta ^2 \left(208 \eta ^2 \kmin^2-3207 i \eta  \kmin-5796\right)+10 \beta  \eta 
-\left(250
-   i \eta ^3 \kmin^3+1405 \eta ^2 \kmin^2-3207 i \eta 
-\kmin-5796\right)-28980\right)
-   k^2-160 \kmin \left(24 \eta ^4 \kmin^4-88 i \eta ^3 \kmin^3-597 \eta ^2
-   \kmin^2+783 i \eta  \kmin-9 \beta ^2 \eta ^2 \left(8 \eta ^2 \kmin^2-87 i \eta 
-   \kmin-126\right)+\beta  \eta  \left(-88 i \eta ^3 \kmin^3-669 \eta ^2
-\kmin^2+1566 i
-   \eta  \kmin+2268\right)+1134\right) k-320 \kmin^2 \left(-24 \eta ^4 \kmin^4+88
-i \eta
-   ^3 \kmin^3-348 \eta ^2 \kmin^2+477 i \eta  \kmin+9 \beta ^2 \eta ^2 \left(8
-\eta ^2
-   \kmin^2+53 i \eta  \kmin+84\right)+2 \beta  \eta  \left(44 i \eta ^3
-\kmin^3-138 \eta
-   ^2 \kmin^2+477 i \eta  \kmin+756\right)+756\right)\right)\Bigg\} 
-%
+-\sqrt{k-\kmin}\sqrt{\kmin} \Bigg\{-2835 \eta ^4 k^6+1890 i \eta ^3 (10 \beta  \eta +i \kmin \eta
++10) k^5+14 \eta ^2 \Bigg(1800 \beta ^2 \eta ^2\\
++1428 \kmin^2 \eta ^2-1660 i \kmin \eta +5 \beta(-332 i\eta  \kmin-1761) \eta -10605\Bigg) k^4-4
+\eta  \Bigg(-2364 \eta ^3 \kmin^3\\
++13480 i\eta ^2 \kmin^2
++39465 \eta  \kmin+75 \beta ^2 \eta ^2(200 \eta  \kmin-1083 i)+5 \beta\eta 
+   \bigg(2696 i \eta ^2 \kmin^2+10893 \eta  \kmin \displaybreak[0]\\
+-32490 i\bigg)-81225 i\Bigg) k^3
+-24 \Bigg(1392 \eta ^4 \kmin^4-1000 i \eta ^3 \kmin^3-10930 \eta ^2 \kmin^2+12735 i
+\eta \kmin\\
++5 \beta ^2 \eta ^2 \left(208 \eta ^2 \kmin^2+2547 i \eta\kmin+5796\right)+10
+   \beta  \eta  \bigg(-100 i \eta ^3 \kmin^3\\
+-989 \eta ^2 \kmin^2+2547 i \eta \kmin+5796\bigg)+28980\Bigg) k^2+160 \kmin \Bigg(24 \eta ^4
+\kmin^4+32 i \eta^3\kmin^3 \displaybreak[0]\\
+-453 \eta ^2 \kmin^2+603 i \eta  \kmin+9 \beta ^2 \eta ^2 \left(8 \eta^2
+   \kmin^2+67 i \eta  \kmin+126\right)+\beta  \eta  \bigg(32 i \eta ^3 \kmin^3-381
+\eta ^2 \kmin^2\\
++1206 i \eta  \kmin+2268\bigg)+1134\Bigg) k+320 \kmin^2 \Bigg(24 \eta^4 \kmin^4+32 i \eta ^3
+\kmin^3+492 \eta ^2 \kmin^2-657 i \eta  \kmin\\
++9\beta ^2 \eta ^2 \left(8 \eta ^2 \kmin^2-73 i \eta  \kmin-84\right)+2 \beta  \eta  \bigg(16 i
+\eta ^3 \kmin^3\\
++282 \eta ^2 \kmin^2-657 i \eta\kmin-756\bigg)-756\Bigg)\Bigg\}\displaybreak[1]\\
+% 
++\sqrt{\kmin} \sqrt{k+\kmin} \Bigg(-2835 \eta^4 k^6+630 \eta ^3 (5 i \beta  \eta +3 \kmin \eta +5
+i) k^5-14 \eta ^2 \bigg(1800 \beta ^2\eta^2\\
+-1428 \kmin^2 \eta ^2+2710 i \kmin \eta +5 \beta  (542i \eta  \kmin+3201)\eta
+   +14205\bigg) k^4-4 \eta  \bigg(2364 \eta ^3 \kmin^3\\
++6620 i \eta ^2 \kmin^2-9465\eta\kmin+75 \beta ^2 \eta ^2 (200 \eta  \kmin+303 i)+5 \beta  \eta 
+\bigg(1324 i \eta ^2\kmin^2+1107 \eta  \kmin \displaybreak[0]\\
++9090 i\bigg)+22725 i\bigg) k^3+24 \Bigg(-1392 \eta^4
+   \kmin^4+2500 i \eta ^3 \kmin^3+13010 \eta ^2 \kmin^2-16035 i \eta \kmin\\
++5 \beta^2 \eta ^2 \left(208 \eta ^2 \kmin^2-3207 i \eta  \kmin-5796\right)+10 \beta  \eta 
+\bigg(250 i \eta ^3 \kmin^3+1405 \eta ^2 \kmin^2 \displaybreak[0]\\
+-3207 i \eta\kmin-5796\bigg)-28980\Bigg) k^2-160 \kmin \Bigg(24 \eta ^4 \kmin^4-88 i \eta ^3
+\kmin^3-597 \eta ^2 \kmin^2+783 i \eta  \kmin\\
+-9 \beta ^2 \eta ^2 \left(8 \eta ^2 \kmin^2-87 i\eta \kmin-126\right)+\beta  \eta  \bigg(-88 i
+\eta ^3 \kmin^3-669 \eta ^2\kmin^2\\
++1566 i \eta  \kmin+2268\bigg)+1134\Bigg) k-320 \kmin^2 \bigg(-24 \eta ^4 \kmin^4+88
+i \eta^3 \kmin^3-348 \eta ^2 \kmin^2+477 i \eta  \kmin\\
++9 \beta ^2 \eta ^2 \left(8\eta ^2 \kmin^2+53 i \eta  \kmin+84\right)\\
++2 \beta  \eta  \left(44 i\eta ^3\kmin^3-138 \eta
+   ^2 \kmin^2+477 i \eta  \kmin+756\right)+756\bigg)\Bigg)\Bigg\} \,.
 \end{multline}
 
 
