Added labels to equations and continued discussion in results.

--- a/appendix.tex
+++ b/appendix.tex
@@ -442,6 +442,7 @@ S(\kvi) = \frac{1}{(2\pi)^2} \left\{J_\A + J_\B + J_{\wt{\C}} + J_{\wt{\D}} \rig
 % 
 where
 \begin{align}
+\label{eq:Jdefns-apx}
  J_\A(\kvi) &= \int_{\kmin}^{\kmax} \d q\, \left( 
                 \frac{\Uppp}{H^2} q^2 + \frac{8\pi G}{(aH)^2}\dN{\vp_{0}}\left[ 
  3a^2\Upp q^2  + \frac{7}{2}q^4 + 2k^2q^2 \right] \right) \dvp1(\qvi) \A(\kvi, \qvi) \,, \\
@@ -461,6 +462,8 @@ J_{\wt{\D}}(\kvi) &= \int_{\kmin}^{\kmax} \d q\, \left(
 
 The analytic solution for $J_\A$ is given by
 \begin{multline}
+\label{eq:JA-apx}
+% 
 J_\A = \left( 
                 \frac{\Uppp}{H^2} + \frac{8\pi G}{(aH)^2}\dN{\vp_{0}}\left[ 
  3a^2\Upp    + 2k^2 \right] \right)\frac{ \alpha^2}{2880\eta ^2 k}\Bigg\{\\
@@ -543,6 +546,8 @@ k-16\right) \pi  k^3 \displaybreak[0]\\
 The analytic solution for $J_\B$ is 
 % 
 \begin{multline}
+\label{eq:JB-apx}
+% 
 J_\B = -\frac{8\pi G}{(aH)^2}\dN{\vp_{0}}\frac{9}{2}\frac{\alpha ^2}{2822400 \eta ^2
 k} \Bigg\{29400 \left(4 \eta ^2 k^2+15 i \eta k+120\right)
 \arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right) k^3 \\
@@ -632,6 +637,8 @@ i \eta  \kmin-126\right) k \\
 The analytic solution for $J_{\wt{\C}}$ is 
 % 
 \begin{multline}
+\label{eq:JC-apx}
+% 
  J_{\wt{\C}} = -8\pi G \dN{\vp_{0}} \frac{3}{2} \frac{\alpha ^2 }{14400 \beta ^2 \eta ^4 k}
 \Bigg\{-15 k \arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right)
    \Bigg(9 \eta ^4 k^4-60 i \eta ^3 k^3-560 \eta ^2 k^2 \\
@@ -703,6 +710,8 @@ k^2+24\right)+1920\Bigg) \log \left(2 \left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\r
 The analytic solution for $J_{\wt{\D}}$ is 
 % 
 \begin{multline}
+\label{eq:JD-apx}
+% 
 J_{\wt{\D}} = 8\pi G \dN{\vp_{0}}\frac{\alpha ^2}{302400\beta ^2\eta ^4 k} 
 \Bigg\{-5040 k \arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right) \Bigg(9 \eta ^4 k^4 
 +230 \eta ^2 k^2+260 i \eta k\\
