Added new parts to corrections.

--- a/appendix.tex
+++ b/appendix.tex
@@ -282,7 +282,7 @@ $\H$ and $\vp+0$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{Analytic tests for \texorpdfstring{$\B,\wt{\C}$ and $\wt{\D}$}{B, C and D} terms}
+\section{Analytic Tests for \texorpdfstring{$\B,\wt{\C}$ and $\wt{\D}$}{B, C and D} Terms}
 \label{sec:apx-codetests}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -456,7 +456,7 @@ J_{\wt{\C}}(\kvi) &= \int_{\kmin}^{\kmax} \d q\, \left(
 %  
 J_{\wt{\D}}(\kvi) &= \int_{\kmin}^{\kmax} \d q\, \left(
                        8\pi G \dN{\vp_{0}} \left[2-\frac{q^2}{k^2}\right] kq \right)
-\dN{\dvp1}(\qvi) \wt{\D}(\kvi, \qvi) \,. \\
+\dN{\dvp1}(\qvi) \wt{\D}(\kvi, \qvi) \,. 
 \end{align}
 % 
 
