--- a/corrections.tex
+++ b/corrections.tex
@@ -639,6 +639,602 @@ oscillations in one mode will be matched by those in another. At later times whe
 modes are approximately constant the resulting source term is clearly smoother. 
 }
 
+\subsection{Point 15: Compare numerical results with analytic solution}
+
+\textbf{Added as Section~\ref{sec:analytic-res} to Results Chapter:}
+In this section results for the quadratic model will be compared with an analytic solution for this
+model. However, an analytical result is difficult to obtain for the case of the full first
+order solution in terms of Hankel functions with the phase information included. The analytical
+solution we will use, therefore, is the non-interacting de Sitter
+space solution with the phase information ignored. The first order perturbations are then given by
+% 
+\begin{equation}
+ \dvp1(\eta, \kvi) = \frac{1}{a\sqrt{2 k}} \left( 1 - \frac{i}{k \eta}\right) \,,
+\end{equation}
+% 
+and the derivative in terms of $\N$ is 
+% 
+\begin{equation}
+ \dN{\dvp1}(\eta, \kvi) = -  \frac{1}{a\sqrt{2 k}} \left( 1 -
+                        \frac{i}{k \eta}\right) \left(1 + \frac{1}{aH\eta}\right)
+                         - \frac{i}{a^2 H \sqrt{2}}\sqrt{k}\,.
+\end{equation}
+% 
+
+The source term is found using \eq{eq:KG2-source-ntime} and the values of the background
+quantities. The analytical solution of \eq{eq:KG2-source-ntime} for this choice of first order
+solution is given in Appendix~\ref{sec:analyticsrc-apx} in Eqs.
+(\ref{eq:Jdefns-apx}-\ref{eq:JD-apx}).
+
+In Figure~\ref{fig:analytic-61before-corr} the analytical and calculated solutions are plotted for
+one timestep about 60 e-foldings before the end of inflation. At a single time step the correlation
+between the two solutions for $S$ is very good. There is a deviation at small
+values of $k$ due to the analytical solution getting rapidly smaller as $k$ approaches zero. This
+ is not replicated in the calculated version. However, this only strongly affects the
+result for the smallest values of $k$ and for $\kwmap$ for example the relative error of the
+calculated solution compared to the analytical solution is about $10^{-4}$. The relative error of
+the calculated solution is shown in Figure~\ref{fig:analytic-61before-errors-corr} for a single time
+step.
+
+\begin{figure}
+ \centering
+ \includegraphics[width=0.8\textwidth]{numerical/graphs/analytic_v_calced_61beforeend-large}
+ % analytic_v_calced_61beforeend-large.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=0 0 432 324
+ \caption[Comparison of Analytical and Calculated Source Terms]{A comparison of the
+analytical and calculated solutions for the source term at one time step, approximately 60
+e-foldings before the end of inflation.}
+ \label{fig:analytic-61before-corr}
+\end{figure}
+
+\begin{figure}
+ \centering
+ \includegraphics[width=0.8\textwidth]{numerical/graphs/analytic_v_calced_61beforeend_errors-large}
+ \caption[Relative Error Of Calculated Solution at One Time Step]{The relative error of the
+calculated solution compared to the analytical solution for the source term. The error is shown
+for all $k$ values at one time step, approximately 60 e-foldings before the end of inflation.}
+ \label{fig:analytic-61before-errors-corr}
+\end{figure}
+
+The analytical and calculated values for the source term can also be compared for a single $k$
+value across a range of time steps. In Figure~\ref{fig:analytic-prehorizon-corr} the absolute
+magnitude of the source term for $\kwmap$ is plotted for a range of a few e-foldings before horizon
+crossing. The analytical and calculated results are extremely similar and not distinguishable in the
+plot. The relative error of the calculated solution is around $10^{-4}$. Because the first order
+perturbations do not include any phase information the result is much smoother than the result
+generated using the full first order phase information. However, as the phase angle is a function of
+$|\kvi-\qvi|$ it cannot be trivially ignored in the computation of the full convolution integral. 
+
+\begin{figure}
+ \centering
+ \includegraphics{numerical/graphs/analytic_v_calced_prehorizon-large.pdf}
+ % analytic_v_calced_prehorizon-large.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=0 0 432 324
+ \caption[Comparison of Solutions Before Horizon Crossing]{A comparison of the analytical and
+calculated results for the source term of the $\kwmap$ mode before horizon crossing.}
+ \label{fig:analytic-prehorizon-corr}
+\end{figure}
+
+\textbf{Added as Appendix~\ref{sec:analyticsrc-apx}:}
+
+Suppose the first order perturbations are given by the non-interacting de Sitter space solution
+such that
+% 
+ \begin{equation}
+ \dvp1(\eta, \kvi) = \frac{1}{a\sqrt{2 k}} \left( 1 - \frac{i}{k \eta}\right) \,,
+\end{equation}
+% 
+and the derivative in terms of $\N$ is 
+% 
+\begin{equation}
+ \dN{\dvp1}(\eta, \kvi) = -  \frac{1}{a\sqrt{2 k}} \left( 1 -
+                        \frac{i}{k \eta}\right) \left(1 + \frac{1}{aH\eta}\right)
+                         - \frac{i}{a^2 H \sqrt{2}}\sqrt{k}\,.
+\end{equation}
+% 
+The analytic solution of \eq{eq:KG2-source-ntime} for this choice of first order
+solution can be written in terms of four integrals of the $\A$-$\wt{\D}$ terms:
+% 
+\begin{equation}
+\label{eq:KG2-source-jterms-corr}
+S(\kvi) = \frac{1}{(2\pi)^2} \left\{J_\A + J_\B + J_{\wt{\C}} + J_{\wt{\D}} \right\}\,,
+\end{equation}
+% 
+where
+\begin{align}
+\label{eq:Jdefns-corr}
+ J_\A(\kvi) &= \int_{\kmin}^{\kmax} \d q\, \left( 
+                \frac{\Uppp}{H^2} q^2 + \frac{8\pi G}{(aH)^2}\dN{\vp_{0}}\left[ 
+ 3a^2\Upp q^2  + \frac{7}{2}q^4 + 2k^2q^2 \right] \right) \dvp1(\qvi) \A(\kvi, \qvi) \,, \\
+% 
+ J_\B(\kvi) &= \int_{\kmin}^{\kmax} \d q\, \frac{8\pi G}{(aH)^2}\dN{\vp_{0}}\left(-\frac{9}{2} -
+\frac{q^2}{k^2}\right)kq^3 \dvp1(\qvi) \B(\kvi, \qvi) \,, \\
+%  
+J_{\wt{\C}}(\kvi) &= \int_{\kmin}^{\kmax} \d q\, \left(
+                        -8\pi G \dN{\vp_{0}} \frac{3}{2}q^2 \right) \dN{\dvp1}(\qvi)
+\wt{\C}(\kvi, \qvi) \,, \\
+%  
+J_{\wt{\D}}(\kvi) &= \int_{\kmin}^{\kmax} \d q\, \left(
+                       8\pi G \dN{\vp_{0}} \left[2-\frac{q^2}{k^2}\right] kq \right)
+\dN{\dvp1}(\qvi) \wt{\D}(\kvi, \qvi) \,. 
+\end{align}
+% 
+
+The analytic solution for $J_\A$ is given by
+\begin{multline}
+\label{eq:JA-corr}
+% 
+J_\A = \left( 
+                \frac{\Uppp}{H^2} + \frac{8\pi G}{(aH)^2}\dN{\vp_{0}}\left[ 
+ 3a^2\Upp    + 2k^2 \right] \right)\frac{ \alpha^2}{2880\eta ^2 k}\Bigg\{\\
+240 k \arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right) \left(\eta ^2 k^2-12 i \eta  k-24\right) \\
+-120 k \pi  \left(\eta ^2 k^2-12 i \eta  k-24\right)
+-80\sqrt{\kmax}
+   \Bigg(\Bigg[3 \left(\sqrt{\kmax-k}-\sqrt{k+\kmax}\right) k^2 \\
+-14 \kmax
+   \left(\sqrt{\kmax-k}+\sqrt{k+\kmax}\right) k+8 \kmax^2
+   \left(\sqrt{\kmax-k}-\sqrt{k+\kmax}\right)\Bigg] \eta ^2 \\
++48 i \left(\kmax
+   \left(\sqrt{k+\kmax}-\sqrt{\kmax-k}\right)+k
+   \left(\sqrt{\kmax-k}+\sqrt{k+\kmax}\right)\right) \eta \\
++72
+   \left(\sqrt{k+\kmax}-\sqrt{\kmax-k}\right)\Bigg) \displaybreak[0]\\
+% 
+-80 \sqrt{\kmin} \Bigg(\Bigg[3
+   \left(\sqrt{k-\kmin}+\sqrt{k+\kmin}\right) k^2
+-14 \kmin\left(\sqrt{k-\kmin}-\sqrt{k+\kmin}\right) k \\
++8 \kmin^2
+   \left(\sqrt{k-\kmin}+\sqrt{k+\kmin}\right)\Bigg] \eta ^2
++12 i \Bigg[k
+   \left(\sqrt{k-\kmin}-4 \sqrt{k+\kmin}\right) \\
++2 \kmin
+\left(\sqrt{k-\kmin}-2
+   \sqrt{k+\kmin}\right)\Bigg] \eta +72
+   \left(\sqrt{k-\kmin}-\sqrt{k+\kmin}\right)\Bigg) \displaybreak[0]\\
+% 
++240 k \left(\eta ^2 k^2+24\right)\log\left(2 \sqrt{k}\right)
+-240 k \left(\eta ^2 k^2+24\right)\log \left(2 \left(\sqrt{\kmax}+\sqrt{\kmax-k}\right)\right)\\
+-240 k \left(\eta ^2 k^2+24\right) \log \left(2\left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\right)\\
++240 k \left(\eta ^2 k^2+24\right) \log
+\left(2 \left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right)\Bigg\} \displaybreak[0]\\
+% 
+%
++ \frac{8\pi G}{(aH)^2}\dN{\vp_{0}}\frac{7}{2}\frac{\alpha ^2}{2880 \eta
+^2 k} \Bigg\{3 \sqrt{2} \left(-317 \eta ^2 k^2+1000 i \eta  k+560\right) k^3 \\
++3\sqrt{2} \left(317 \eta ^2 k^2-1000 i \eta  k-560\right) k^3 \\
++45 \left(\eta ^2 k^2-12 i \eta k-16\right) \arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right) k^3
++45\left(\eta ^2 k^2+8 i \eta k+16\right)
+   \log \left(2 \sqrt{k}\right) k^3 \\
+-45 \left(\eta ^2 k^2+8 i \eta  k+16\right) \log \left(2
+   \left(\sqrt{\kmax}+\sqrt{\kmax-k}\right)\right) k^3 \\
+-45 \left(\eta ^2 k^2-8 i \eta 
+   k+16\right) \log \left(2 \left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\right) k^3 \\
++45\left(\eta ^2 k^2-8 i \eta  k+16\right) \log \left(2
+\left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right) k^3 -\frac{45}{2} \left(\eta ^2 k^2-12 i \eta 
+k-16\right) \pi  k^3 \displaybreak[0]\\
+% 
+-3 \sqrt{\kmax} \Bigg(15 \eta ^2
+   \left(\sqrt{\kmax-k}-\sqrt{k+\kmax}\right) k^4 \\
+ +10 \eta  (\eta  \kmax+12 i)
+   \left(\sqrt{\kmax-k}+\sqrt{k+\kmax}\right) k^3 \\ 
++8 \left(\eta ^2 \kmax^2+10 i \eta 
+   \kmax+30\right) \left(\sqrt{\kmax-k}-\sqrt{k+\kmax}\right) k^2 \\
+-16 \kmax \left(11\eta ^2 \kmax^2-20 i \eta  \kmax-10\right)
+   \left(\sqrt{\kmax-k}+\sqrt{k+\kmax}\right) k \\
++128 \kmax^2 \left(\eta ^2 \kmax^2-5i \eta  \kmax-5\right)
+\left(\sqrt{\kmax-k}-\sqrt{k+\kmax}\right)\Bigg) \displaybreak[0]\\
+%  
+-3 \sqrt{\kmin} \Bigg(15 \eta ^2 \left(\sqrt{k-\kmin}+\sqrt{k+\kmin}\right) k^4 \\
++10 \eta\left(\eta  \kmin \left(\sqrt{k-\kmin}-\sqrt{k+\kmin}\right)-6 i \left(3
+   \sqrt{k-\kmin}+2 \sqrt{k+\kmin}\right)\right) k^3 \\
++8 \Bigg(\eta ^2
+   \left(\sqrt{k-\kmin}+\sqrt{k+\kmin}\right) \kmin^2-5 i \eta  \left(3
+   \sqrt{k-\kmin}-2 \sqrt{k+\kmin}\right) \kmin \\
++30
+   \left(\sqrt{k+\kmin}-\sqrt{k-\kmin}\right)\Bigg) k^2 \displaybreak[0]\\
+-16 \kmin \Bigg(11 \eta ^2
+   \left(\sqrt{k-\kmin}-\sqrt{k+\kmin}\right) \kmin^2-10 i \eta 
+   \left(\sqrt{k-\kmin}-2 \sqrt{k+\kmin}\right) \kmin \\+10
+   \left(\sqrt{k-\kmin}+\sqrt{k+\kmin}\right)\Bigg) k \\
++64 \kmin^2 \Bigg(2 \eta ^2
+   \left(\sqrt{k-\kmin}+\sqrt{k+\kmin}\right) \kmin^2+5 i \eta 
+   \left(\sqrt{k-\kmin}-2 \sqrt{k+\kmin}\right) \kmin \\
++10
+   \left(\sqrt{k-\kmin}-\sqrt{k+\kmin}\right)\Bigg)\Bigg)\Bigg\}\,. 
+\end{multline}
+
+The analytic solution for $J_\B$ is 
+% 
+\begin{multline}
+\label{eq:JB-corr}
+% 
+J_\B = -\frac{8\pi G}{(aH)^2}\dN{\vp_{0}}\frac{9}{2}\frac{\alpha ^2}{2822400 \eta ^2
+k} \Bigg\{29400 \left(4 \eta ^2 k^2+15 i \eta k+120\right)
+\arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right) k^3 \\
++29400 \left(4 \eta ^2 k^2-51 i \eta 
+   k-120\right) \log \left(2 \sqrt{k}\right) k^3 \\
+-29400 \left(4 \eta ^2 k^2-51 i \eta k-120\right) \log
+   \left(2 \left(\sqrt{\kmax}+\sqrt{\kmax-k}\right)\right) k^3 \\
+-29400 \left(4 \eta ^2 k^2+51 i \eta  k-120\right) \log \left(2
+\left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\right) k^3 \\
++29400 \left(4 \eta ^2 k^2+51 i \eta  k-120\right) \log \left(2
+   \left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right) k^3 \\
+-14700 \left(4 \eta ^2 k^2+15 i
+\eta 
+   k+120\right) \pi  k^3 
++280 \sqrt{\kmax (k+\kmax)} \Bigg(420 \eta ^2 k^4 \\
++5 \eta  (200 \eta \kmax+303 i) k^3 + \left(-416 \eta ^2 \kmax^2+6414 i \eta  \kmax+11592\right)
+k^2 \\ 
+- 24\kmax \left(8 \eta ^2 \kmax^2-87 i \eta  \kmax-126\right) k 
++48 \kmax^2\left(8\eta ^2 \kmax^2+53 i \eta  \kmax+84\right)\Bigg) \displaybreak[0]\\
+% 
+-280 \sqrt{\kmax (\kmax-k)}
+   \Bigg(420 \eta ^2 k^4-5 \eta  (200 \eta  \kmax+303 i) k^3 \\
++\left(-416 \eta ^2 \kmax^2+6414 i
+   \eta  \kmax+11592\right) k^2+24 \kmax \left(8 \eta ^2 \kmax^2-87 i \eta 
+   \kmax-126\right) k \\
++48 \kmax^2 \left(8 \eta ^2 \kmax^2+53 i \eta 
+   \kmax+84\right)\Bigg) \displaybreak[0] \\
+% 
+-280 \sqrt{\kmin} \sqrt{k+\kmin} \Bigg(420 \eta ^2 k^4+5
+\eta 
+   (200 \eta  \kmin+303 i) k^3 \\
++\left(-416 \eta ^2 \kmin^2+6414 i \eta \kmin+11592\right)k^2 -24 \kmin \left(8 \eta ^2 \kmin^2-87
+i \eta  \kmin-126\right) k \\
++48 \kmin^2 \left(8 \eta ^2 \kmin^2+53 i \eta  \kmin+84\right)\Bigg) \displaybreak[0]\\
+-280 \sqrt{(k-\kmin)
+   \kmin} \Bigg(420 \eta ^2 k^4+5 \eta  (1083 i-200 \eta  \kmin) k^3 \\
+-2 \left(208 \eta ^2
+   \kmin^2+2547 i \eta  \kmin+5796\right) k^2+24 \kmin \left(8 \eta ^2
+\kmin^2+67 i
+   \eta  \kmin+126\right) k \\
++48 \kmin^2 \left(8 \eta ^2 \kmin^2-73 i \eta 
+   \kmin-84\right)\Bigg)\Bigg\} \displaybreak[1]\\
+% 
+% 
+- \frac{8\pi G}{(aH)^2}\dN{\vp_{0}}\frac{\alpha ^2}{2822400 \eta ^2 k^3} \Bigg\{105
+\left(270 \eta ^2 k^2+2765 i \eta  k+4956\right) \arctan \left(\sqrt{\frac{\kmin}{k-\kmin}}\right)
+   k^5 \\
++105 \left(270 \eta ^2 k^2-3745 i \eta  k-4956\right) \log \left(2 \sqrt{k}\right) k^5\\
+-105\left(270 \eta ^2 k^2-3745 i \eta  k-4956\right) \log \left(2
+   \left(\sqrt{\kmax}+\sqrt{\kmax-k}\right)\right) k^5 \\
+-105 \left(270 \eta ^2 k^2+3745 i \eta 
+   k-4956\right) \log \left(2 \left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\right) k^5 \\
++105\left(270  \eta ^2 k^2+3745 i \eta  k-4956\right) \log \left(2
+   \left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right) k^5 \\
+-\frac{105}{2} \left(270 \eta ^2 k^2+2765 i \eta  k+4956\right) \pi  k^5\displaybreak[0]\\
+% 
+-\sqrt{\kmax (\kmax-k)} \Bigg(28350 \eta ^2 k^6+525 \eta  (36
+   \eta  \kmax-749 i) k^5 \\
++70 \left(216 \eta ^2 \kmax^2-3745 i \eta\kmax-7434\right) k^4 
+-40 \kmax \left(3516 \eta ^2 \kmax^2-133 i \eta  \kmax+8673\right) k^3 \\
+-48 \kmax^2 \left(1360 \eta ^2 \kmax^2-18655 i \eta  \kmax-22442\right) k^2 \\
++64 \kmax^3 \left(600 \eta ^2 \kmax^2-5110 i \eta  \kmax-5733\right) k \\
++256\kmax^4 \left(300 \eta ^2 \kmax^2+1855 i \eta  \kmax+2646\right)\Bigg) \displaybreak[0]\\
+% 
++\sqrt{\kmax(k+\kmax)} \Bigg(28350 \eta ^2 k^6-525 \eta  (36 \eta  \kmax-749 i) k^5 \\
++70 \left(216 \eta ^2  \kmax^2-3745 i \eta  \kmax-7434\right) k^4
++40 \kmax \left(3516 \eta ^2 \kmax^2-133 i \eta  \kmax+8673\right) k^3 \\
+-48 \kmax^2 \left(1360 \eta^2 \kmax^2-18655 i \eta  \kmax-22442\right) k^2
+-64 \kmax^3 \left(600\eta ^2 \kmax^2-5110 i \eta  \kmax-5733\right) k \\
++256 \kmax^4 \left(300 \eta^2 \kmax^2+1855 i \eta  \kmax+2646\right)\Bigg) \displaybreak[0] \\
+% 
+-\sqrt{\kmin} \sqrt{k+\kmin}
+   \Bigg(28350 \eta ^2 k^6-525 \eta  (36 \eta  \kmin-749 i) k^5 \\
++70 \left(216 \eta ^2 \kmin^2-3745 i \eta  \kmin-7434\right) k^4
++40 \kmin \left(3516 \eta ^2 \kmin^2-133 i \eta  \kmin+8673\right) k^3 \\
+-48 \kmin^2 \left(1360 \eta^2 \kmin^2-18655 i \eta  \kmin-22442\right) k^2
+-64 \kmin^3 \left(600\eta ^2 \kmin^2-5110 i \eta  \kmin-5733\right) k \\
++256 \kmin^4 \left(300 \eta^2\kmin^2+1855 i \eta  \kmin+2646\right)\Bigg) \displaybreak[0]\\
+-\sqrt{(k-\kmin) \kmin}\Bigg(28350 \eta ^2 k^6+525 \eta  (36 \eta  \kmin+553 i) k^5 \\
++70 \left(216\eta ^2 \kmin^2+2765 i \eta\kmin+7434\right) k^4 
+-40 \kmin \left(3516 \eta ^2\kmin^2-9247 i \eta\kmin-8673\right) k^3 \\
+-48 \kmin^2 \left(1360 \eta^2 \kmin^2+15155 i \eta\kmin+22442\right) k^2 
++64 \kmin^3 \left(600\eta ^2 \kmin^2+3710 i \eta\kmin+5733\right) k \\
++256 \kmin^4 \left(300 \eta ^2\kmin^2-2555 i \eta\kmin-2646\right)\Bigg)\Bigg\}\,.
+\end{multline}
+
+The analytic solution for $J_{\wt{\C}}$ is 
+% 
+\begin{multline}
+\label{eq:JC-corr}
+% 
+ J_{\wt{\C}} = -8\pi G \dN{\vp_{0}} \frac{3}{2} \frac{\alpha ^2 }{14400 \beta ^2 \eta ^4 k}
+\Bigg\{-15 k \arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right)
+   \Bigg(9 \eta ^4 k^4-60 i \eta ^3 k^3-560 \eta ^2 k^2 \\
++960 i \eta  k-80 \beta ^2 \eta ^2 \left(\eta ^2 k^2-12 i \eta  k-24\right) 
++20 \beta  \eta\left(-3 i \eta ^3 k^3-32 \eta ^2 k^2+96 i \eta k+192\right)+1920\Bigg)
+\displaybreak[0]\\
+% 
++\frac{15}{2} k \pi  \Bigg(9 \eta ^4 k^4-60 i \eta ^3 k^3-560 \eta ^2
+k^2+960 i
+   \eta  k-80 \beta ^2 \eta ^2 \left(\eta ^2 k^2-12 i \eta  k-24\right) \\
++20 \beta  \eta  \left(-3 i\eta ^3 k^3-32 \eta ^2 k^2+96 i \eta  k+192\right)+1920\Bigg)
+\displaybreak[0]\\
+% 
+-\sqrt{\kmax (\kmax-k)} \Bigg(9 \left(15 k^4+10 \kmax k^3-248 \kmax^2 k^2+336 \kmax^3 k
+-128\kmax^4\right) \eta ^4 \\
++3840 i (k-\kmax)^2 \kmax \eta ^3 +80 \left(69 k^2-178 \kmax k+184 \kmax^2\right) \eta ^2 \\ 
++400 \beta ^2 \left(\left(3 k^2-14 \kmax k+8 \kmax^2\right) \eta^2 
++48 i (k-\kmax) \eta -72\right)\eta ^2+19200 i (k-\kmax) \eta \\
++320 \beta  \Bigg[12 i   (k-\kmax)^2 \kmax \eta ^3+\left(21 k^2-62 \kmax k+56 \kmax^2\right) \eta
+^2 \\
++120 i(k-\kmax) \eta  -180\Bigg] \eta -28800\Bigg) \displaybreak[0] \\
+% 
++\sqrt{\kmax (k+\kmax)} \Bigg(9\left(15 k^4-10 \kmax k^3-248 \kmax^2 k^2-336 \kmax^3 k-128
+\kmax^4\right) \eta ^4 \\
++3840 i \kmax (k+\kmax)^2 \eta ^3+80 \left(69 k^2+178 \kmax k+184 \kmax^2\right)\eta^2 \\
++400 \beta^2 \left(\left(3 k^2+14 \kmax k+8 \kmax^2\right) \eta ^2 -48 i (k+\kmax)
+   \eta -72\right) \eta ^2 \\
+-19200 i (k+\kmax) \eta +320 \beta  \Bigg[12 i \kmax
+(k+\kmax)^2 \eta ^3+\left(21 k^2+62 \kmax k+56 \kmax^2\right) \eta ^2 \\
+-120 i (k+\kmax) \eta -180\Bigg] \eta -28800\Bigg) \displaybreak[0] \\
+% 
++\sqrt{\kmin} \sqrt{k+\kmin} \Bigg(9 \left(-15 k^4+10  \kmin k^3+248 \kmin^2 k^2+336 \kmin^3 k+128
+\kmin^4\right) \eta ^4 \\
+-3840 i \kmin (k+\kmin)^2 \eta ^3-80 \left(69 k^2+178 \kmin k+184 \kmin^2\right)\eta^2 \\
+-400 \beta ^2 \left(\left(3 k^2+14 \kmin k+8 \kmin^2\right) \eta ^2-48 i(k+\kmin)
+   \eta -72\right) \eta ^2 \\
++19200 i (k+\kmin) \eta +320 \beta  \Bigg[-12 i \kmin
+   (k+\kmin)^2 \eta ^3-\left(21 k^2+62 \kmin k+56 \kmin^2\right) \eta ^2 \\
++120 i(k+\kmin) \eta +180\Bigg] \eta +28800\Bigg) \displaybreak[0]\\
+% 
+-\sqrt{(k-\kmin) \kmin} \Bigg(-9\left(15
+   k^4+10 \kmin k^3-248 \kmin^2 k^2+336 \kmin^3 k-128 \kmin^4\right) \eta^4 \\
++60 i \left(15 k^3-54 \kmin k^2+8 \kmin^2 k+16 \kmin^3\right) \eta ^3
+-80 \left(39k^2-38  \kmin k+104 \kmin^2\right) \eta ^2 \\
++400 \beta ^2 \left(\left(3 k^2-14 \kmin k+8 \kmin^2\right) \eta ^2+12 i (k+2 \kmin) \eta
++72\right) \eta ^2 \\
++4800 i (k+2 \kmin) \eta +20 i \beta  \Bigg[3 \left(15 k^3-54 \kmin k^2+8 \kmin^2 k+16
+\kmin^3\right) \eta ^3 \\
++32 i \left(3 k^2+4 \kmin k+8 \kmin^2\right) \eta ^2+480 (k+2 \kmin) \eta -2880
+i\Bigg]
+   \eta +28800\Bigg) \displaybreak[0] \\
+% 
++15 k \left(9 \eta ^4 k^4-400 \eta ^2 k^2-320 \beta  \eta 
+\left(\eta ^2
+   k^2-12\right)+80 \beta ^2 \eta ^2 \left(\eta ^2 k^2+24\right)+1920\right) \log \left(2
+\sqrt{k}\right) \\
+-15k \Bigg(9 \eta ^4 k^4-400 \eta ^2 k^2-320 \beta  \eta  \left(\eta ^2 k^2-12\right)\\
++80 \beta ^2\eta ^2 \left(\eta ^2 k^2+24\right)+1920\Bigg) \log \left(2
+   \left(\sqrt{\kmax}+\sqrt{\kmax-k}\right)\right) \\
+-15 k \Bigg(9 \eta ^4 k^4-400 \eta ^2 k^2-320
+   \beta  \eta  \left(\eta ^2 k^2-12\right) \\
++80 \beta ^2 \eta ^2 \left(\eta ^2
+k^2+24\right)+1920\Bigg) \log \left(2 \left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\right) \\
++15 k \Bigg(9 \eta ^4 k^4-400\eta ^2 k^2-320 \beta  \eta  \left(\eta ^2 k^2-12\right) \\
++80 \beta ^2 \eta ^2 \left(\eta ^2 k^2+24\right)+1920\Bigg) \log \left(2
+   \left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right)\Bigg\} \,.
+\end{multline}
+
+The analytic solution for $J_{\wt{\D}}$ is 
+% 
+\begin{multline}
+\label{eq:JD-corr}
+% 
+J_{\wt{\D}} = 8\pi G \dN{\vp_{0}}\frac{\alpha ^2}{302400\beta ^2\eta ^4 k} 
+\Bigg\{-5040 k \arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right) \Bigg(9 \eta ^4 k^4 
++230 \eta ^2 k^2+260 i \eta k\\
++20 \beta ^2 \eta ^2 \left(2 \eta ^2 k^2+13 i \eta  k-12\right) 
++10\beta \eta \left(27 \eta^2 k^2+52 i \eta  k-48\right)-240\Bigg) \displaybreak[0]\\
++2520 k \pi\Bigg(9 \eta ^4 k^4+230 \eta ^2 k^2+260 i \eta  k+20
+\beta ^2\eta ^2 \left(2 \eta ^2 k^2+13 i \eta  k-12\right)\\
++10 \beta  \eta  \left(27 \eta ^2 k^2+52 i\eta k-48\right)-240\Bigg)
++\frac{16\sqrt{k+\kmax}}{\kmax^{3/2}} \Bigg(-35 \eta ^2 \Bigg(111 \eta ^2
+   \kmax^2 \displaybreak[0]\\
++192 i \eta  \kmax+64 \beta  \eta  (3 i \eta  \kmax+1)+64\Bigg) k^4
+-5\eta\Bigg(-294 \eta ^3 \kmax^3-717 i \eta ^2 \kmax^2+2656 \eta  \kmax \\
++960 \beta ^2\eta ^2 (3 \eta  \kmax-i)+\beta  \eta  \left(-717 i \eta ^2 \kmax^2+5536 \eta 
+\kmax-1920 i\right)-960 i\Bigg) k^3 \\
+-6 \Bigg(-588 \eta ^4 \kmax^4+1305 i \eta ^3 \kmax^3+9965
+\eta ^2 \kmax^2+15520 i \eta  \kmax\displaybreak[0]\\
++20 \beta ^2 \eta ^2 \left(45 \eta ^2\kmax^2+776 i\eta\kmax+252\right)+5 \beta\eta\Bigg(261 i
+\eta ^3 \kmax^3+2173 \eta ^2\kmax^2 
++6208 i\eta  \kmax+2016\Bigg) \displaybreak[0]\\
++5040\Bigg) k^2 +4 \kmax \Bigg(84 \eta ^4 \kmax^4-330 i\eta ^3 \kmax^3-3275 \eta ^2 \kmax^2+7065 i
+\eta  \kmax-15 \beta ^2 \eta ^2 \Bigg(20\eta ^2 \kmax^2 \\
+-471 i \eta  \kmax+1008\Bigg)-5 \beta\eta  \left(66 i \eta ^3\kmax^3+715\eta ^2 \kmax^2-2826 i \eta 
+\kmax+6048\right)-15120\Bigg) k\\
++8 \kmax^2\Bigg(-84 \eta^4 \kmax^4+330 i \eta ^3 \kmax^3-1450 \eta ^2 \kmax^2+2385 i \eta 
+\kmax+15 \beta^2 \eta ^2 \Bigg(20 \eta ^2 \kmax^2\\
++159 i \eta  \kmax+378\Bigg)+10 \beta  \eta\left(33 i \eta ^3 \kmax^3-115 \eta ^2 \kmax^2+477 i
+\eta \kmax+1134\right)+5670\Bigg)\Bigg)\displaybreak[0]\\
++16\kmax^{-3/2} \sqrt{\kmax-k}\Bigg(35\eta ^2 \left(111 \eta ^2 \kmax^2+192 i \eta 
+\kmax+64 \beta \eta  (3 i \eta \kmax+1)+64\right) k^4\\
++5 \eta  \Bigg(294 \eta ^3 \kmax^3+717 i \eta^2 \kmax^2-2656
+   \eta  \kmax-960 \beta ^2 \eta ^2 (3 \eta  \kmax-i) \\
++i \beta  \eta  \left(717 \eta ^2  \kmax^2+5536 i \eta  \kmax+1920\right)+960 i\Bigg) k^3+6
+\Bigg(-588 \eta ^4\kmax^4+1305 i \eta ^3 \kmax^3 \\
++9965 \eta ^2 \kmax^2+15520 i \eta\kmax+20 \beta
+   ^2 \eta ^2 \left(45 \eta ^2 \kmax^2+776 i \eta  \kmax+252\right) \\
++5 \beta  \eta\left(261 i \eta ^3 \kmax^3+2173 \eta ^2 \kmax^2+6208 i \eta 
+\kmax+2016\right)+5040\Bigg)k^2
++4 \kmax \Bigg(84 \eta ^4 \kmax^4 \\
+-330 i \eta ^3 \kmax^3-3275 \eta ^2\kmax^2+7065 i\eta  \kmax-15 \beta ^2 \eta ^2 \left(20 \eta ^2
+\kmax^2-471 i \eta \kmax+1008\right)\\
+-5 \beta  \eta  \left(66 i \eta ^3 \kmax^3+715 \eta ^2\kmax^2-2826 i
+   \eta  \kmax+6048\right)-15120\Bigg) k \displaybreak[0] \\
+-8 \kmax^2 \Bigg(-84 \eta ^4 \kmax^4+330i \eta^3 \kmax^3-1450 \eta ^2 \kmax^2+2385 i \eta 
+\kmax+15 \beta ^2 \eta ^2 \bigg(20\eta ^2 \kmax^2\\
++159 i \eta  \kmax+378\bigg)+10 \beta  \eta\left(33 i \eta ^3\kmax^3-115 \eta ^2 \kmax^2+477 i \eta 
+\kmax+1134\right)+5670\Bigg)\Bigg)\displaybreak[0]\\
+% 
++16 \kmin^{-3/2}
+   \sqrt{k+\kmin} \Bigg(35 \eta ^2 \left(111 \eta ^2 \kmin^2+192 i \eta  \kmin+64
+\beta \eta  (3 i \eta  \kmin+1)+64\right) k^4 \\
+-5 \eta  \Bigg(294 \eta ^3 \kmin^3+717 i \eta^2\kmin^2-2656 \eta  \kmin-960 \beta ^2 \eta ^2 (3
+\eta  \kmin-i) \\
++i \beta  \eta\left(717 \eta ^2 \kmin^2+5536 i \eta  \kmin+1920\right)+960 i\Bigg) k^3
++6\Bigg(-588 \eta ^4 \kmin^4 \\
++1305 i \eta ^3 \kmin^3+9965 \eta ^2 \kmin^2+15520 i \eta 
+\kmin+20 \beta ^2 \eta ^2 \left(45 \eta ^2 \kmin^2+776 i \eta  \kmin+252\right) \\
++5 \beta  \eta \left(261 i \eta ^3 \kmin^3+2173 \eta ^2 \kmin^2+6208 i \eta 
+   \kmin+2016\right)+5040\Bigg) k^2\displaybreak[0]\\
+-4 \kmin \Bigg(84 \eta ^4 \kmin^4-330 i \eta^3\kmin^3-3275 \eta ^2 \kmin^2+7065 i \eta  \kmin-15
+\beta ^2 \eta ^2 \bigg(20\eta ^2\kmin^2\\
+-471 i \eta  \kmin+1008\bigg)
+-5 \beta  \eta  \left(66 i\eta ^3\kmin^3+715 \eta ^2 \kmin^2-2826 i \eta 
+\kmin+6048\right)-15120\Bigg) k\\
+-8 \kmin^2\Bigg(-84 \eta^4 \kmin^4+330 i \eta ^3 \kmin^3-1450 \eta ^2 \kmin^2+2385 i \eta 
+\kmin+15 \beta^2 \eta ^2 \bigg(20 \eta ^2 \kmin^2 \\
++159 i \eta  \kmin+378\bigg)+10 \beta  \eta\left(33 i
+   \eta ^3 \kmin^3-115 \eta ^2 \kmin^2+477 i \eta 
+   \kmin+1134\right)+5670\Bigg)\Bigg)\displaybreak[0]\\
+% 
+-16\kmin^{-3/2}\sqrt{k-\kmin}\Bigg(35\eta ^2 \left(111 \eta ^2 \kmin^2+192 i \eta  \kmin+64 \beta
+ \eta  (3 i \eta \kmin+1)+64\right) k^4\\
++10 \eta  \Bigg(147 \eta ^3 \kmin^3-1104 i \eta ^2\kmin^2+1552
+   \eta  \kmin+480 \beta ^2 \eta ^2 (3 \eta  \kmin-i)\\
++16 \beta  \eta  \left(-69 i \eta^2  
+\kmin^2+187 \eta  \kmin-60 i\right)-480 i\Bigg) k^3+6 \Bigg(-588 \eta ^4
+\kmin^4+480 i\eta ^3 \kmin^3\\
++8165 \eta ^2 \kmin^2+14720 i \eta  \kmin-20 \beta ^2 \eta ^2\left(45
+   \eta ^2 \kmin^2-736 i \eta  \kmin-252\right)\\
++5 \beta  \eta  \left(96 i \eta ^3 \kmin^3+1453 \eta ^2 \kmin^2+5888 i \eta 
+\kmin+2016\right)+5040\Bigg) k^2 \\
++4 \kmin \Bigg(84 \eta ^4 \kmin^4+120 i \eta ^3 \kmin^3-2675 \eta ^2\kmin^2+6165 i\eta  \kmin+15
+\beta ^2 \eta ^2 \bigg(20 \eta ^2 \kmin^2 \\
++411 i \eta\kmin-1008\bigg)+5 i \beta  \eta  \left(24 \eta ^3 \kmin^3+475 i \eta ^2
+\kmin^2+2466 \eta  \kmin+6048 i\right)-15120\Bigg) k\displaybreak[0]\\
++8 \kmin^2 \bigg(84 \eta ^4\kmin^4+120i \eta^3 \kmin^3+2050 \eta ^2 \kmin^2-3285 i \eta  \kmin+15
+\beta ^2 \eta ^2 \bigg(20\eta ^2\kmin^2 \\
+-219 i \eta  \kmin-378\bigg)+10 \beta  \eta  \left(12 i
+\eta ^3\kmin^3+235  \eta ^2 \kmin^2-657 i \eta 
+\kmin-1134\right)-5670\bigg)\Bigg) \displaybreak[0]\\
+% 
+-5040 k\bigg(-9 \eta ^4 k^4-45 i \eta ^3 k^3-150 \eta ^2 k^2-340 i \eta  k+20 \beta ^2 \eta ^2
+\left(2\eta ^2 k^2-17 i \eta  k+12\right)\\
++5 \beta  \eta  \left(-9 i \eta ^3 k^3-22 \eta ^2 k^2-136
+i \eta k+96\right)+240\bigg) \log \left(2 \sqrt{k}\right)\\
++5040 k \bigg(-9 \eta ^4 k^4-45 i \eta^3 k^3-150 \eta^2 k^2-340 i \eta  k+20 \beta ^2 \eta ^2
+\left(2 \eta ^2 k^2-17 i \eta  k+12\right)\\
++5 \beta \eta \left(-9 i \eta ^3 k^3-22 \eta ^2 k^2-136 i \eta  k+96\right)+240\bigg) \log
+\left(2 \left(\sqrt{\kmax}+\sqrt{\kmax-k}\right)\right) \\
++5040 k \bigg(-9 \eta ^4 k^4+45 i \eta^3 k^3-150 \eta ^2 k^2+340 i \eta  k+20 \beta ^2 \eta ^2
+\left(2 \eta ^2 k^2+17 i \eta k+12\right)\\
++5 \beta\eta  \left(9 i \eta ^3 k^3-22 \eta ^2 k^2+136 i \eta  k+96\right)+240\bigg) \log \left(2
+   \left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\right)\\
+-5040 k \bigg(-9 \eta ^4 k^4+45 i \eta^3 k^3-150 \eta ^2 k^2+340 i \eta  k+20 \beta ^2 \eta ^2
+\left(2 \eta ^2 k^2+17 i \eta k+12\right) \\
++5 \beta \eta  \left(9 i \eta ^3 k^3-22 \eta ^2 k^2+136 i \eta  k+96\right)+240\bigg) \log \left(2
+   \left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right)\Bigg\} \displaybreak[1]\\
+% 
+% 
+% 
+% 
+ +8\pi G \dN{\vp_{0}} \frac{\alpha ^2}{604800\beta ^2 \eta^4 k^3} 
+\Bigg\{315 \Bigg(-9 \eta ^4 k^4+60 i \eta^3 k^3 -130 \eta ^2 k^2+300 i \eta  k\\
++20\beta ^2 \eta ^2 \left(4 \eta ^2 k^2+15 i \eta  k+120\right)+10
+\beta  \eta  \left(6 i \eta ^3 k^3-5 \eta^2 k^2+60 i \eta  k+480\right)\\
++2400\Bigg)\arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right)k^3 
++315 \Bigg(9 \eta ^4 k^4+10 i \eta ^3 k^3 +290 \eta ^2 k^2-1020 i \eta  k\\
++20 \beta ^2 \eta^2\left(4 \eta ^2 k^2-51 i \eta  k-120\right)
++10\beta  \eta  \left(i \eta ^3 k^3+37 \eta ^2 k^2-204i\eta k-480\right)\\
+-2400\Bigg) \log \left(2\sqrt{k}\right) k^3 -315 \Bigg(9 \eta ^4 k^4+10 i \eta ^3
+k^3+290\eta ^2 k^2-1020 i \eta  k\\
++20 \beta ^2 \eta ^2 \left(4 \eta ^2 k^2-51 i \eta 
+k-120\right)+10\beta  \eta \left(i \eta ^3 k^3+37 \eta ^2 k^2-204 i \eta  k-480\right)\\
+-2400\Bigg)\log \left(2 \left(\sqrt{\kmax}+\sqrt{\kmax-k}\right)\right) k^3 
+-315 \Bigg(9 \eta ^4 k^4-10 i \eta^3 k^3\\
++290 \eta ^2 k^2+1020 i \eta  k+20 \beta ^2 \eta ^2\left(4 \eta ^2 k^2+51 i \eta 
+k-120\right)+10 \beta\eta \bigg(-i \eta ^3 k^3+37 \eta ^2 k^2\\
++204 i \eta k-480\bigg)
+-2400\Bigg) \log\left(2\left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\right) k^3+315 \Bigg(9 \eta ^4
+k^4-10 i \eta^3 k^3\\
++290 \eta ^2 k^2+1020 i \eta  k+20 \beta ^2 \eta ^2 \left(4 \eta ^2 k^2+51 i\eta 
+k-120\right)\\
++10   \beta  \eta  \left(-i \eta ^3 k^3+37 \eta ^2 k^2+204 i \eta 
+k-480\right)
+-2400\Bigg) \log\left(2  \left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right) k^3 \displaybreak[0]\\
+% 
+-\frac{315}{2} \Bigg(-9 \eta ^4 k^4+60 i \eta ^3 k^3-130 \eta ^2 k^2+300 i \eta  k+20 \beta ^2
+\eta ^2 \left(4 \eta ^2 k^2+15 i \eta k+120\right)\\
++10 \beta  \eta  \left(6 i \eta ^3 k^3-5 \eta ^2 k^2+60 i \eta 
+k+480\right)+2400\Bigg) \pi k^3\displaybreak[0]\\
++\sqrt{\kmax} \sqrt{k+\kmax} \Bigg\{2835 \eta ^4 k^6-630 i \eta ^3(5 \beta  \eta-3 i
+   \kmax \eta +5) k^5+14 \eta ^2 \Bigg(1800 \beta ^2 \eta ^2\\
+-1428 \kmax^2 \eta ^2+2710 i\kmax \eta +5 \beta  (542 i \eta  \kmax+3201) \eta +14205\Bigg) k^4\\
++4\eta \Bigg(2364 \eta^3 \kmax^3+6620 i \eta ^2 \kmax^2-9465 \eta  \kmax+75 \beta ^2 \eta ^2 (200
+\eta \kmax+303 i)\displaybreak[0]\\
++5 \beta  \eta  \left(1324 i \eta ^2 \kmax^2+1107 \eta  \kmax+9090
+   i\right)+22725 i\Bigg) k^3\\
+-24 \Bigg(-1392 \eta ^4 \kmax^4+2500 i \eta ^3\kmax^3+13010 \eta^2 \kmax^2-16035 i \eta  \kmax+5
+\beta ^2 \eta ^2 \bigg(208 \eta ^2\kmax^2\\
+-3207 i \eta \kmax-5796\bigg)+10 \beta  \eta  \left(250 i \eta ^3 \kmax^3+1405 \eta ^2
+   \kmax^2-3207 i \eta  \kmax-5796\right)-28980\Bigg) k^2\displaybreak[0] \\
+% 
++160 \kmax \Bigg(24 \eta^4  \kmax^4-88 i \eta ^3 \kmax^3-597 \eta ^2 \kmax^2+783 i \eta  \kmax-9
+\beta ^2 \eta ^2 \bigg(8 \eta ^2 \kmax^2\\
+-87 i \eta  \kmax-126\bigg)+\beta  \eta  \left(-88 i\eta ^3
+   \kmax^3-669 \eta ^2 \kmax^2+1566 i \eta  \kmax+2268\right)+1134\Bigg) k\\
++320 \kmax^2 \Bigg(-24 \eta ^4 \kmax^4+88 i \eta ^3 \kmax^3-348 \eta ^2
+\kmax^2+477 i\eta  \kmax\\
++9 \beta ^2 \eta ^2 \left(8 \eta ^2 \kmax^2+53 i \eta\kmax+84\right)+2
+   \beta  \eta  \bigg(44 i \eta ^3 \kmax^3-138 \eta ^2 \kmax^2\\
++477 i \eta\kmax+756\bigg)+756\Bigg)\Bigg\}\displaybreak[1]\\
+% 
++\sqrt{\kmax} \sqrt{\kmax-k} \Bigg\{-2835 \eta^4 k^6-630 \eta ^3 (5 i \beta  \eta +3 \kmax \eta +5
+i) k^5-14 \eta ^2 \Bigg(1800 \beta ^2\eta^2\\
+-1428 \kmax^2 \eta ^2+2710 i \kmax \eta +5 \beta (542i \eta  \kmax+3201)\eta +14205\Bigg) k^4\\
++4\eta  \Bigg(2364 \eta ^3 \kmax^3+6620 i \eta ^2 \kmax^2-9465\eta\kmax+75 \beta ^2 \eta ^2 (200
+\eta \kmax+303 i)\\
++5 \beta  \eta  \left(1324 i \eta ^2 \kmax^2+1107 \eta  \kmax+9090 i\right)+22725
+i\Bigg) k^3+24 \Bigg(-1392 \eta ^4\kmax^4+2500 i \eta ^3 \kmax^3 \\
++13010 \eta ^2 \kmax^2-16035 i\eta\kmax+5 \beta^2 \eta ^2 \left(208 \eta ^2 \kmax^2-3207 i \eta 
+\kmax-5796\right) \displaybreak[0]\\
++10 \beta  \eta\left(250 i \eta ^3 \kmax^3+1405 \eta ^2 \kmax^2-3207 i \eta 
+\kmax-5796\right)-28980\Bigg) k^2\\
++160 \kmax \Bigg(24 \eta ^4 \kmax^4-88 i \eta ^3 \kmax^3-597
+\eta ^2 \kmax^2+783 i \eta  \kmax-9 \beta ^2 \eta ^2 \bigg(8 \eta ^2 \kmax^2-87 i \eta \kmax\\
+-126\bigg)+\beta  \eta  \left(-88 i \eta ^3 \kmax^3-669 \eta ^2\kmax^2+1566 i
+   \eta  \kmax+2268\right)+1134\Bigg) k \displaybreak[0]\\
+-320 \kmax^2 \Bigg(-24 \eta ^4 \kmax^4+88i \eta^3 \kmax^3-348 \eta ^2 \kmax^2+477 i \eta  \kmax\\
++9\beta ^2 \eta ^2 \left(8\eta ^2\kmax^2+53 i \eta  \kmax+84\right)+2 \beta  \eta  \bigg(44 i
+\eta^3\kmax^3-138 \eta^2 \kmax^2+477 i \eta  \kmax+756\bigg)+756\Bigg)\Bigg\}\displaybreak[0]\\
+% 
+-\sqrt{k-\kmin}\sqrt{\kmin} \Bigg\{-2835 \eta ^4 k^6+1890 i \eta ^3 (10 \beta  \eta +i \kmin \eta
++10) k^5+14 \eta ^2 \Bigg(1800 \beta ^2 \eta ^2\\
++1428 \kmin^2 \eta ^2-1660 i \kmin \eta +5 \beta(-332 i\eta  \kmin-1761) \eta -10605\Bigg) k^4-4
+\eta  \Bigg(-2364 \eta ^3 \kmin^3\\
++13480 i\eta ^2 \kmin^2
++39465 \eta  \kmin+75 \beta ^2 \eta ^2(200 \eta  \kmin-1083 i)+5 \beta\eta 
+   \bigg(2696 i \eta ^2 \kmin^2+10893 \eta  \kmin \displaybreak[0]\\
+-32490 i\bigg)-81225 i\Bigg) k^3
+-24 \Bigg(1392 \eta ^4 \kmin^4-1000 i \eta ^3 \kmin^3-10930 \eta ^2 \kmin^2+12735 i
+\eta \kmin\\
++5 \beta ^2 \eta ^2 \left(208 \eta ^2 \kmin^2+2547 i \eta\kmin+5796\right)+10
+   \beta  \eta  \bigg(-100 i \eta ^3 \kmin^3\\
+-989 \eta ^2 \kmin^2+2547 i \eta \kmin+5796\bigg)+28980\Bigg) k^2+160 \kmin \Bigg(24 \eta ^4
+\kmin^4+32 i \eta^3\kmin^3 \displaybreak[0]\\
+-453 \eta ^2 \kmin^2+603 i \eta  \kmin+9 \beta ^2 \eta ^2 \left(8 \eta^2
+   \kmin^2+67 i \eta  \kmin+126\right)+\beta  \eta  \bigg(32 i \eta ^3 \kmin^3-381
+\eta ^2 \kmin^2\\
++1206 i \eta  \kmin+2268\bigg)+1134\Bigg) k+320 \kmin^2 \Bigg(24 \eta^4 \kmin^4+32 i \eta ^3
+\kmin^3+492 \eta ^2 \kmin^2-657 i \eta  \kmin\\
++9\beta ^2 \eta ^2 \left(8 \eta ^2 \kmin^2-73 i \eta  \kmin-84\right)+2 \beta  \eta  \bigg(16 i
+\eta ^3 \kmin^3\\
++282 \eta ^2 \kmin^2-657 i \eta\kmin-756\bigg)-756\Bigg)\Bigg\}\displaybreak[1]\\
+% 
++\sqrt{\kmin} \sqrt{k+\kmin} \Bigg(-2835 \eta^4 k^6+630 \eta ^3 (5 i \beta  \eta +3 \kmin \eta +5
+i) k^5-14 \eta ^2 \bigg(1800 \beta ^2\eta^2\\
+-1428 \kmin^2 \eta ^2+2710 i \kmin \eta +5 \beta  (542i \eta  \kmin+3201)\eta
+   +14205\bigg) k^4-4 \eta  \bigg(2364 \eta ^3 \kmin^3\\
++6620 i \eta ^2 \kmin^2-9465\eta\kmin+75 \beta ^2 \eta ^2 (200 \eta  \kmin+303 i)+5 \beta  \eta 
+\bigg(1324 i \eta ^2\kmin^2+1107 \eta  \kmin \displaybreak[0]\\
++9090 i\bigg)+22725 i\bigg) k^3+24 \Bigg(-1392 \eta^4
+   \kmin^4+2500 i \eta ^3 \kmin^3+13010 \eta ^2 \kmin^2-16035 i \eta \kmin\\
++5 \beta^2 \eta ^2 \left(208 \eta ^2 \kmin^2-3207 i \eta  \kmin-5796\right)+10 \beta  \eta 
+\bigg(250 i \eta ^3 \kmin^3+1405 \eta ^2 \kmin^2 \displaybreak[0]\\
+-3207 i \eta\kmin-5796\bigg)-28980\Bigg) k^2-160 \kmin \Bigg(24 \eta ^4 \kmin^4-88 i \eta ^3
+\kmin^3-597 \eta ^2 \kmin^2+783 i \eta  \kmin\\
+-9 \beta ^2 \eta ^2 \left(8 \eta ^2 \kmin^2-87 i\eta \kmin-126\right)+\beta  \eta  \bigg(-88 i
+\eta ^3 \kmin^3-669 \eta ^2\kmin^2\\
++1566 i \eta  \kmin+2268\bigg)+1134\Bigg) k-320 \kmin^2 \bigg(-24 \eta ^4 \kmin^4+88
+i \eta^3 \kmin^3-348 \eta ^2 \kmin^2+477 i \eta  \kmin\\
++9 \beta ^2 \eta ^2 \left(8\eta ^2 \kmin^2+53 i \eta  \kmin+84\right)\\
++2 \beta  \eta  \left(44 i\eta ^3\kmin^3-138 \eta
+   ^2 \kmin^2+477 i \eta  \kmin+756\right)+756\bigg)\Bigg)\Bigg\} \,.
+\end{multline}
+
+
 
 \subsection{Point 16: Discuss cases where one needs to go beyond slow roll}
 
