Changed to remove labels and hyperref. Version sent to examiners the second time.

--- a/thesis.tex
+++ b/thesis.tex
@@ -20,9 +20,9 @@ onehalfspacing % onehalfspacing or doublespacing
 % CVSon for cvs revision number in footers
 % CVSoff is default-
 \usepackage[%CVSon, % CVS version in footers
-            labels, % show labels
+            %labels, % show labels
 	    %todos, % show todos
-            hyperref % Use hyperref for links
+            %hyperref % Use hyperref for links
             ]{ihformat}
 
 
