Fixed Kazuya Point 8 to refer to Mairi Point 15.

--- a/corrections.tex
+++ b/corrections.tex
@@ -1569,8 +1569,8 @@ potentials at early times.}
  \label{fig:cos-keta-corr}
 \end{figure}
 
-\subsection{Point 8: Check analytic solution}
-\textbf{This change has not been completed yet.}
+\subsection{Point 8: Compare analytic solution with results}
+\textbf{Please refer to Point 15 above.}
 
 \subsection{Point 9: Add more explanation for why code was developed, and explain how
 you would calculate \texorpdfstring{$\fnl$}{fNL}}
