Changed width of figure.

--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -402,7 +402,7 @@ $|\kvi-\qvi|$ it cannot be trivially ignored in the computation of the full conv
 
 \begin{figure}
  \centering
- \includegraphics{numerical/graphs/analytic_v_calced_prehorizon-large.pdf}
+ \includegraphics[width=0.8\textwidth]{numerical/graphs/analytic_v_calced_prehorizon-large.pdf}
  % analytic_v_calced_prehorizon-large.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=0 0 432 324
  \caption[Comparison of Solutions Before Horizon Crossing]{A comparison of the analytical and
 calculated results for the source term of the $\kwmap$ mode before horizon crossing.}
