Started to change initial conditions section.

--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -606,9 +606,10 @@ perturbation mode to be $\dvp2=0, \dN{\dvp2}=0$ at
 the time when the corresponding first order perturbation is initialised.
 In addition, the perturbations in the far past are supposed to have been purely Gaussian and
 so at this time the second order perturbation would be zero. 
-With this choice of initial conditions for $\dvp2$ the homogeneous part of the solution of
-\eq{eq:KG2-fourier-sr-ntime} can be calculated as done in Appendix~\ref{sec:init-apx}. The result
-is that the homogeneous part of the solution is zero for all times.
+% 
+
+The homogeneous part of the solution of
+\eq{eq:KG2-fourier-sr-ntime} can be calculated as done in Appendix~\ref{sec:init-apx}. 
 
 
   
