Changed order of imports in ihformat to remove issue with \d commmand. Changed bibstyle file to use one in base directory.

--- a/ihformat.sty
+++ b/ihformat.sty
@@ -72,8 +72,8 @@
 \RequirePackage[numbers,sort&compress]{natbib}
 
 
-% My macros package
-\RequirePackage{ihmacros}
+% % My macros package
+% \RequirePackage{ihmacros}
 
 
 % Todo notes package
@@ -115,3 +115,5 @@
 \cfoot[\fancyplain{\thepage}{}]         {\fancyplain{\thepage}{}}
 \rfoot[\fancyplain{} {}]  {\fancyplain{}{\CVSrevision}}
 
+% My macros package
+\RequirePackage{ihmacros}
