--- a/thesis.tex
+++ b/thesis.tex
@@ -129,7 +129,7 @@ appendix,
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Bibliography
 \bibliography{thesis}
-\bibliographystyle{../../packages/utphys-ih}
+\bibliographystyle{utphys-ih}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
