--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -132,7 +132,13 @@ dashed) parts of the perturbation are shown for the scale $\kwmap$.}
 Figure~\ref{fig:dp2realimag} shows the evolution of the second
 order perturbations for the scale $\kwmap$. As mentioned above, the
 overall amplitude of the second order perturbation is many orders of
-magnitude smaller than the corresponding first order one. In Figures~\ref{fig:dp1}
+magnitude smaller than the corresponding first order one. 
+% 
+The results given for $\dvp2$ in this
+chapter are for the full solution which includes a homogeneous and particular solution as described in
+Section~\ref{sec:initconds-num}.
+% 
+ In Figures~\ref{fig:dp1}
 and \ref{fig:dp2realimag} the field values have been rescaled by
 $k^{3/2}/(\sqrt{2}\pi)$ to allow for a better appreciation of the
 magnitude of the resulting power spectra.
