Removed erroneous Eq6.11 number from eq:Q2I-num by adding \nonumber.

--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -322,8 +322,7 @@ At second order the Sasaki-Mukhanov variable becomes more complicated
 \wt{\dvp2} = &\dvp2
 +\frac{\vp_0'}{\H}\psi_2
 +\frac{\vp_0'}{4\H}\left(
-\nabla^{-2}\X^{ij}_{~~,ij}-\X^k_{k}\right)
-\\
+\nabla^{-2}\X^{ij}_{~~,ij}-\X^k_{k}\right) \nonumber\\
 &+\frac{\psi_1}{\H^2}\Big[\vp_0'' {\psi_1}
 +\vp_0'\left(\psi_1'-\frac{\H'}{\H}\psi_1\right)+2\H\delta\vp_1'\Big]
 +\left(2\dvp1+\frac{\vp_0'}{\H}\psi_1\right)_{,k}\xi_{1\mathrm{flat}}^k \,,
