Changed 3a^2\Upp to 3a^2\Upp q^2 in Eq7.4 eq:KG2-sr-sr-aterms.

--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -170,7 +170,7 @@ second order system is run:
 &S(\kvi) = \frac{1}{(2\pi)^2}\int \d q\ \Bigg\{
 a^2\Uppp q^2 \dvp1(\qvi) \A(\kvi,\qvi) \nonumber\\
 &+ \frac{8\pi G}{\H}\vp_{0}' \Bigg[ 
-\left( 3a^2\Upp + \frac{7}{2}q^4 + 2k^2q^2\right) \A(\kvi,\qvi)
+\left( 3a^2\Upp q^2 + \frac{7}{2}q^4 + 2k^2q^2\right) \A(\kvi,\qvi)
 -\left(\frac{9}{2} + \frac{q^2}{k^2}\right)kq^3 \B(\kvi,\qvi)
 \Bigg]\dvp1(\qvi) \nonumber\\
 %
