Changed 'between' to 'from' on Pg 54 before Eq4.14 (old version).

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -339,7 +339,7 @@ when the warp factor scales either as $h \propto \rho$
 or as $h \simeq {\rm constant}$ \cite{ks,kt}. In both cases
 the integral (\ref{eq:throatvolume}) can be performed analytically. 
 Indeed, if we specify $h \propto \rho^{\alpha}$ for some constant $\alpha$,  
-evaluate the integral between $\rho_{*}$ 
+evaluate the integral from $\rho_{*}$ 
 to $\rho_{*}+\Delta \rho_{*}$, and expand to second-order in a 
 Taylor series, we find that  
 % 
