--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -390,7 +390,13 @@ Their dynamics is governed by the action
  S_\mathrm{DBI} = -T_p \int \d^{p+1}\xi \sqrt{-\hat{g}}\,,
 \end{equation}
 where $\hat{g}_{ab}$ is the induced metric on the brane with internal
-coordinates $\xi^a$, for $a=0,\ldots,p$. This is the general form of the DBI
+coordinates $\xi^a$, for $a=0,\ldots,p$, given by \cite{Johnson2000}
+% 
+\begin{equation}
+ g_{\mu\nu} = \hat{g}_{a b} \frac{\partial \xi^a}{\partial x^\mu} \frac{\partial \xi ^b}{\partial x^\nu}\,.
+\end{equation}
+% 
+\eq{eq:gendbiaction-dbiintro} is the general form of the DBI
 action which will be used later.
 
 
