Changed 'note' to 'thesis' on Pg 46.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -592,7 +592,7 @@ relevant fluxes and brane interaction terms.
 We will ignore the precise origin
 and form of this potential, but simply
 note that it is highly sensitive to the string theoretic construction. For the
-purpose of this note we will simply treat it 
+purpose of this thesis we will simply treat it 
 as an arbitrary function of the inflaton field.
 (See, for example, Ref. \cite{brane5} for a discussion 
 on the precise form that the inflaton potential may take.)
