Fixed some spacing issues with equations.

--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -453,8 +453,7 @@ equation in Fourier space is then given by \cite{Malik:2006ir}
 \dvp1(\pvi)\dvp1(\qvi) \right]  \nonumber \\
 %
 &+ \left(\frac{8\pi G}{\H}\right)^2\vp_{0}'\left[2a^2\Uphi\vp_{0}'
-\dvp1(\pvi)\dvp1(\qvi) + \vp_{0}'Q\dvp1(\pvi)\dvp1(\qvi) \right]
-\nonumber \\
+\dvp1(\pvi)\dvp1(\qvi) + \vp_{0}'Q\dvp1(\pvi)\dvp1(\qvi) \right] \nonumber  \displaybreak[0]\\
 %
 &- 2\left(\frac{4\pi G}{\H}\right)^2\frac{\vp_{0}' Q}{\H} \left[Q\dvp1(\pvi)
 \dvp1(\qvi) +
@@ -488,7 +487,7 @@ $q$. The form of $F$ is given by \cite{Malik:2006ir}
 \frac{\vp_{0}'}{\H}\Bigg[
 \left(p_lq^l-\frac{p^iq_jk^jk_i}{k^2}\right) 
 \vp_{0}'\delta\vp_{1}(\pvi)\vp_{0}'\delta\vp_{1}(\qvi)
-\Bigg]\nonumber\\
+\Bigg]\nonumber \displaybreak[0]\\
 % 
 &\quad +2\frac{Q}{\H}\left(\frac{4\pi G}{\H}\right)^2 
 \frac{p_lq^lp_mq^m+p^2q^2}{k^2q^2}
@@ -511,7 +510,7 @@ $q$. The form of $F$ is given by \cite{Malik:2006ir}
 \frac{p_lq^lp_mq^m}{p^2q^2}
 \left( Q\dvp1(\pvi)+\vp_{0}'\dvp1'(\pvi)\right)
 \left(Q\dvp1(\qvi)+\vp_{0}'\dvp1'(\qvi)\right)
-\Bigg]\nonumber\\
+\Bigg]\nonumber \displaybreak[0]\\
 %
 &\quad +\frac{\vp_{0}'}{\H}
 \Bigg[
@@ -584,7 +583,7 @@ a^2\left(\Uppp
 %
 &\qquad +\frac{16\pi G}{\H}a^2
 \vp_{0}'\Upp\dvp1(\pvi)\dvp1(\qvi)\Bigg\}
-\nonumber \\
+\nonumber \displaybreak[0] \\
 %
 &+ \frac{1}{(2\pi)^3}\frac{8\pi G}{\H}
 \int \d^3p\ \d^3q\ \delta^3(\kvi-\pvi-\qvi)  \Bigg\{
@@ -789,7 +788,7 @@ case is \cite{Komatsu:2010fb}
  F_\mathrm{eq}(k_1,k_2,k_3) = 6 N \fnleq \left\{ -\frac{1}{k_1^3 k_2^3} -\frac{1}{k_2^3 k_3^3}
                                 -\frac{1}{k_3^3 k_1^3}  \right.\\
                                 \left.-\frac{2}{(k_1 k_2 k_3)^2}  + \left[ \frac{1}{k_1 k_2^2 k_3^3}
-+ \mathrm{5 perms} \right]
++ \mathrm{5\, perms} \right]
                                 \right\} \,.
 \end{multline}
 % 
