Removed old thesis versions and added final version with links.

--- a/thesis.tex
+++ b/thesis.tex
@@ -22,7 +22,7 @@ onehalfspacing % onehalfspacing or doublespacing
 \usepackage[%CVSon, % CVS version in footers
             %labels, % show labels
 	    %todos, % show todos
-            %hyperref % Use hyperref for links
+            hyperref % Use hyperref for links
             ]{ihformat}
 
 
