Added explanatory comments to style files.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -3,7 +3,7 @@
 %
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{ihmacros}
+\ProvidesPackage{ihmacros}[2010/06/28 v1.0 Ian Huston's useful macro package]
 
 % % % % % % % % % % % % % % % % % % % % % % % 
 % Macros and definitions
