--- a/ihformat.sty
+++ b/ihformat.sty
@@ -4,7 +4,7 @@
 %  
 % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{ihformat}
+\ProvidesPackage{ihformat}[2010/06/28 v1.0 Ian Huston's thesis formatting package]
 
 % Get ifthen package for later on
 \RequirePackage{ifthen}
