Changed to a4paper and removed declaration.tex.

--- a/thesis.tex
+++ b/thesis.tex
@@ -5,6 +5,7 @@
 \documentclass[
 %  twoside,
 12pt,
+a4paper,
 bibtotoc, % Include bibliography in contents
 liststotoc, % Include lists of figures and tables in contents
 idxtotoc, % Include index in contents
